# luonvuituoi-honor-roll

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  honor.schema.json  mkdocs.yml  pyproject.toml  wsgi.py
.github/: dependabot.yml
.github/workflows/: lint.yml  publish-docs.yml  test.yml
docs/: admin-auth.md  admin-auth.vi.md  architecture.md  architecture.vi.md  config-reference.md  config-reference.vi.md  deploy-docker.md  deploy-docker.vi.md  deploy-vercel.md  deploy-vercel.vi.md  index.md  index.vi.md  operations.md  operations.vi.md  quickstart.md  quickstart.vi.md  security.md  security.vi.md  troubleshooting.md  troubleshooting.vi.md  user-guide.md  user-guide.vi.md
docs/javascripts/: theme-picker.js
docs/stylesheets/: extra.css
examples/demo-honor/: _validate.py  honor.config.json  prepare_demo.py
examples/demo-honor/data/: demo-2025.json  demo-teams-2025.json
overrides/: main.html
scripts/: export_schema.py  fix_lint.py  lint_and_docs.py  run_tests.py
