[project]
name = "luonvuitoi-honor-workspace"
version = "0.1.0"
description = "LUONVUITUOI-HONOR ROLL monorepo root (config-driven student honor-roll toolkit)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line length — formatter handles this
    "B008",  # typer.Option in defaults is the idiomatic Typer pattern
    "B905",  # zip(strict=...) — noisy false-positive for simple helpers
    "UP007",  # typing.Union vs X | Y — some Pydantic codepaths still need Union
    "UP042",  # StrEnum upgrade — deferred; our str-Enum works fine on 3.11
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/cli/tests"]
addopts = "-ra -q"
markers = [
    "e2e: end-to-end tests that spin up a live Flask server (slower; skip with `-m 'not e2e'`).",
]
